--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
 		<title>Tony Xin</title>
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/mdb.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
@@ -250,7 +250,19 @@
 			      <li class="nav-item" id="contact">
 			        <a class="nav-link" href="contact.html">Contact Me<span class="sr-only">(current)</span></a>
 			      </li>
-			    </ul>
+                </ul>
+                
+                <ul class="navbar-nav nav-flex-icons">
+                    <li class="nav-item">
+                        <a class="nav-link"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"><i class="fab fa-linkedin"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"><i class="fab fa-youtube"></i></a>
+                    </li>
+                </ul>
 			  </div>
 			</nav>
 		</nav>
