--- a/contact.html
+++ b/contact.html
@@ -224,48 +224,48 @@
 		  <!--Navbar-->
 			<nav id="nav-bar" class="navbar navbar-expand-lg navbar-light lighten-3 animated fadeInDown" style="z-index: 100; position: relative;">
 
-			  <!-- Navbar brand -->
-			  <a class="navbar-brand" style="font-size: 30px; font-weight: bold;" href="index.html">Tony Xin</a>
-
-			  <!-- Collapse button -->
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-			    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			    <span class="navbar-toggler-icon"></span>
-			  </button>
-
-			  <div class="collapse navbar-collapse ml-3" id="navbarSupportedContent">
-			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item dropdown" id="portfolio">
-			        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          Portfolio
-			        </a>
-			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			          <a class="dropdown-item" href="#creations">Creations</a>
-			          <a class="dropdown-item" href="#volunteering">Volunteering</a>
-			          <a class="dropdown-item" href="#activities">Activities</a>
-			          <a class="dropdown-item" href="#work-experience">Work Experience</a>
-			          <a class="dropdown-item" href="#languages">Languages</a>
-			        </div>
-			      </li>
-			      <li class="nav-item" id="contact">
-			        <a class="nav-link" href="contact.html">Contact Me<span class="sr-only">(current)</span></a>
-			      </li>
-                </ul>
-                
-                <ul class="navbar-nav nav-flex-icons">
-                    <li class="nav-item">
-                        <a class="nav-link"><i class="fab fa-github"></i></a>
+                <!-- Navbar brand -->
+                <a class="navbar-brand ml-2" style="font-size: 25px; font-weight: bold;" href="index.html"><img src="images/favicon.ico" width="40px;"></a>
+  
+                <!-- Collapse button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+  
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown" id="portfolio">
+                      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Portfolio
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#creations">Creations</a>
+                        <a class="dropdown-item" href="#volunteering">Volunteering</a>
+                        <a class="dropdown-item" href="#activities">Activities</a>
+                        <a class="dropdown-item" href="#work-experience">Work Experience</a>
+                        <a class="dropdown-item" href="#languages">Languages</a>
+                      </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link"><i class="fab fa-linkedin"></i></a>
+                    <li class="nav-item" id="contact">
+                      <a class="nav-link" href="contact.html">Contact Me<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link"><i class="fab fa-youtube"></i></a>
-                    </li>
-                </ul>
-			  </div>
-			</nav>
-		</nav>
+                  </ul>
+  
+                  <ul class="navbar-nav nav-flex-icons" style="font-size:1.60em">
+                      <li class="nav-item">
+                          <a class="nav-link" target="_blank" href="https://github.com/TtonyxX"><i class="fa fa-github"></i></a> 
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/tony-xin-041985174/"><i class="fa fa-linkedin-square"></i></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" target="_blank" href="https://www.youtube.com/user/1XxDoubleshotxX1"><i class="fa fa-youtube-play"></i></a>
+                      </li>
+                  </ul>
+                </div>
+              </nav>
+          </nav>
 <!--Section: Contact v.2-->
 <section class="mb-4">
 
