--- a/contact.html
+++ b/contact.html
@@ -248,7 +248,7 @@
                       </div>
                     </li>
                     <li class="nav-item" id="contact">
-                      <a class="nav-link" href="contact.html">Contact Me<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                     </li>
                   </ul>
   
