--- a/random.html
+++ b/random.html
@@ -268,20 +268,11 @@
 
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item dropdown" id="portfolio">
-			        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          Portfolio
-			        </a>
-			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			          <a class="dropdown-item" href="#creations">Creations</a>
-			          <a class="dropdown-item" href="#volunteering">Volunteering</a>
-			          <a class="dropdown-item" href="#activities">Activities</a>
-			          <a class="dropdown-item" href="#work-experience">Work Experience</a>
-			          <a class="dropdown-item" href="#languages">Languages</a>
-			        </div>
-			      </li>
+			      <li class="nav-item" id="portfolio">
+                    <a class="nav-link" href="">Portfolio<span class="sr-only">(current)</span></a>
+                  </li>
 			      <li class="nav-item" id="contact">
-			        <a class="nav-link" href="contact.html">Contact Me<span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
 			      </li>
 			    </ul>
 
