important content updates

--- a/contact.html
+++ b/contact.html
@@ -398,7 +398,7 @@
 			        <a class="nav-link" href="/">Portfolio<span class="sr-only"></span></a>
 			      </li>
                   <li class="nav-item" id="resume">
-			        <a class="nav-link" href="resume">Resume<span class="sr-only"></span></a>
+			        <a class="nav-link" href="public/tonyxin_summer_resume.pdf" target="_blank">Resume<span class="sr-only"></span></a>
 			      </li>
 			      <li class="nav-item" id="contact">
 			        <a class="nav-link" href="contact">Contact<span class="sr-only">(current)</span></a>
@@ -413,8 +413,11 @@
                         <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/tony-xin-041985174/"><i class="fa fa-linkedin-square"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://www.youtube.com/user/1XxDoubleshotxX1"><i class="fa fa-youtube-play"></i></a>
+                        <a class="nav-link" target="_blank" href="https://devpost.com/TtonyxX"><img width="26px" src="https://i.imgur.com/qVY0wz6.png"/></a>
                     </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" target="_blank" href="https://www.youtube.com/user/1XxDoubleshotxX1"><i class="fa fa-youtube-play"></i></a>
+                    </li> -->
                 </ul>
 			  </div>
 			</nav>
@@ -589,7 +592,7 @@
     <!-- Copyright -->
     <div class="text-center pb-3">
     
-        © 2021 Copyright:
+        © 2022 Copyright:
         <a class="text-dark" href="http://tonyxin.com/"> Tony Xin</a>
     </div>
     <!-- Copyright -->
